[tool.poetry]
name = "django-practice"
version = "0.1.0"
description = ""
authors = ["Zachary <tsai880806@gmail.com>"]
readme = "README.md"
packages = [{include = "django_practice"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
